@@ -434,7 +434,7 @@
       <dependency>
         <groupId>com.carrotsearch.randomizedtesting</groupId>
         <artifactId>randomizedtesting-runner</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
